rename to figurl

--- a/jinjaroot.yaml
+++ b/jinjaroot.yaml
@@ -1,5 +1,5 @@
-projectName: figurl2
-pythonProjectVersion: 0.1.6
+projectName: figurl
+pythonProjectVersion: 0.2.0
 projectAuthor: Jeremy Magland
 projectAuthorEmail: jmagland@flatironinstitute.org
 projectDescription:
