--- a/jinjaroot.yaml
+++ b/jinjaroot.yaml
@@ -1,5 +1,5 @@
 projectName: figurl
-pythonProjectVersion: 0.3.0a1
+pythonProjectVersion: 0.3.1
 projectAuthor: Jeremy Magland
 projectAuthorEmail: jmagland@flatironinstitute.org
 projectDescription:
